Adding settings and module information to DataFlows. Other minor edits.

--- a/docs/Composable-Platform/05.System-Administration.md
+++ b/docs/Composable-Platform/05.System-Administration.md
@@ -11,7 +11,7 @@ Composable provides system level features to help users manage their resources w
 
 # Resource Management
 
-## Users
+## [Users](../Users-and-Groups/01.Overview.md)
 
 Users in Composable are a 'securable resource' created for an end-user. Users can be created by the end-user through the registration form or by a System Administrator through the Administration portal). A user consists of a name, email address and security credentials.
 
@@ -39,7 +39,7 @@ On a user profile page, users can:
 
 ![Composable Users](img/02.05.Users.png)
 
-## Groups
+## [Groups](../Users-and-Groups/01.Overview.md)
 
 Groups in Composable are collections of users. Any user can create a group, and add members accordingly. Users can be added to the group by the owner, and also by any user or any other group, with write access to the group. Users can also request to join a group. Group owners are sent an email when a join request is created, and owners have the option to accept or reject it.
 
@@ -49,7 +49,7 @@ Groups provide a natural and collaborative mechanism for multiple users to work 
 
 Folders in Composable provides a method to logically group Composable resources (e.g., DataFlows, QueryViews, WebApps, ...). Folders can then be shared with users and groups.
 
-## Keys
+## [Keys](../Keys/01.Overview.md)
 
 Composable Keys are 'environment variables' that can remain persistent, re-used, and shared, across other Composable resources (e.g., DataFlows), users and groups. Keys are most often used to define and configure connection settings (e.g., to databases) just once, and allow these connections settings to be used across all resources.
 
