--- a/docs/DataFlows/02.Composable-Designer.md
+++ b/docs/DataFlows/02.Composable-Designer.md
@@ -11,9 +11,9 @@ some_url: https://docs.composable.ai
 
 The Composable Designer is where users can compose, or author, their DataFlow Applications. The Composable Designer consists of a rich, modern and web-based user interface design tool for flow-based programming. This design tool is where users in Composable can compose, or author, their DataFlow Applications.
 
-To create a new DataFlow, click on DataFlow or select DataFlow > Create New from the side menu.
+To create a new DataFlow, click on DataFlow or select DataFlow > Create New from the sidebar menu.
 
-The Composable Designer user interface is made up of five primary areas: the canvas, the module library, the toolbar, the properties panel, and the output and progress panel.
+The Composable Designer user interface is made up of five primary areas: the [canvas](#designer-canvas), the [module library](#module-library), the [toolbar](#Designer-toolbar), the [properties panel](#properties-panel), and the [output and progress panel](#output-and-progress-panel).
 
 
 ![Composable DataFlow Application](img/03.02.Img_1.png)
@@ -39,31 +39,43 @@ The Composable Designer Toolbar is a group of icons in the top-center of the can
 
 From left to right:
 
-- A Revision History button to bring up a view of the change and revision history for the DataFlow application.
-- A Reset-Zoom and Zoom-to-Fit button to quickly adjust and toggle between different zoom levels. 
-- A group of buttons for Cut, Copy, and Paste and for Undo and Redo are available. These are commonly-performed actions, with familiar functionality found in other applications such as text editors and image processing tools.
-- A set of Export and Import buttons. In Composable, each DataFlow, including all module inputs and connections, can be serialized and stored as a file (JSON file with .json file extension). In this way, DataFlows can be exported, locally stored, or pushed to a version control system, and imported across other Composable instances.
-- A Clone button, to generate a clone, or copy, of the current DataFlow Application.
-- A Cleanup button, to automatically arrange modules in the canvas.
-- A Help menu, that provides common [keyboard shortcuts](./03.KeyBoard-Shortcuts.md)
-- A Save button, to save the current DataFlow Application.
-- A Run button, including a Debug Mode accessible via the dropdown, which allows you to either Run the entire DataFlow, or step through the modules and inspect intermediate results in Debug mode.
+- **Revision History** to bring up a view of the change and revision history for the DataFlow application.
+- **Reset-Zoom** and **Zoom-to-Fit** to quickly adjust and toggle between different zoom levels. 
+- **Cut**, **Copy**, and **Paste** and for **Undo** and **Redo**. These are commonly-performed actions, with familiar functionality found in other applications such as text editors and image processing tools.
+- **Export** and **Import**. In Composable, each DataFlow, including all module inputs and connections, can be serialized and stored as a file (JSON file with .json file extension). In this way, DataFlows can be exported, locally stored, or pushed to a version control system, and imported across other Composable instances.
+- **Clone** to generate a clone, or copy, of the current DataFlow Application.
+- **Cleanup** to automatically arrange modules in the canvas.
+- **Help** that provides common [keyboard shortcuts](./03.KeyBoard-Shortcuts.md)
+- **Save** to save the current DataFlow Application.
+- **Resume**: DataFlow Resume allows you to carry many module output values from one run to the next. The execution engine detects changes to your DataFlow since the previous run and conditionally determine which modules need to be re-executed, all other modules will reuse the results from the previous run.
+  - Modules whose inputs (connections or values) have been changed since the last run.
+  - Modules with errors in the previous run.
+  - Modules that have the ‘Force Execution’ option set.
+  - Modules whose outputs cannot be cached (certain File executors and Property loaders)
+  - Modules that are downstream of any of the above modules.
+- **Run**, including a **Debug Mode** accessible via the dropdown, which allows you to either Run the entire DataFlow, or step through the modules and inspect intermediate results in Debug mode.
 
 ## Properties Panel
 
 The Properties Panel, on the right-hand side of the canvas, includes:
 
-- The Details card for entering in the Name of the DataFlow as well as a Description.
--- Renaming DataFlows can be done by simply editing the Name and Saving the DataFlow.
+- The **Details** card for entering in the Name of the DataFlow as well as a Description.
 
-- The Navigator card for adjusting the current view and zoom level. The currently viewable section of the canvas is highighted in the thumbnail and can be moved around to pan the canvas.
-- The Module Info card, which provides information on the currently selected module.
-- The Options card, where overall DataFlow settings can be applied. These include:
--- Parallel Execution: When enabled, modules in a DataFlow execute in parallel, as soon as all their input parameters are met.
--- Receive Progress Events: When enabled, progress of a run is visible in the designer. See the Output and Progress Panel below.
--- Realtime Outputs: When enabled, outputs are available in real-time during a run.  See the Output and Progress Panel below.
--- Receive Trace Events: When enabled, status progress is available in the trace panel.  See the Output and Progress Panel below.
--- Error Handling Options: When clicked, options are available for Continue on Error and Email on Error behavior.
+  - Renaming DataFlows can be done by simply editing the Name and Saving the DataFlow.
+
+- The **Navigation** card for adjusting the current view and zoom level. The currently viewable section of the canvas is highighted in the thumbnail and can be moved around to pan the canvas.
+
+- The **Module Info** card, which provides information on the currently selected module.
+
+- The **Options** card, where overall DataFlow settings can be applied. These include:
+
+  - **Avoid Saving Runs**: When enabled, the results of previous runs will not be saved in the Run History page.
+  - **Parallel Execution**: When enabled, modules in a DataFlow execute in parallel, as soon as all their input parameters are met.
+  - **Receive Progress Events**: When enabled, progress of a run is visible in the designer. See the Output and Progress Panel below.
+  - **Realtime Outputs**: When enabled, outputs are available in real-time during a run.  See the Output and Progress Panel below.
+  - **Receive Trace Events**: When enabled, status progress is available in the trace panel.  See the Output and Progress Panel below.
+  - **Error Handling Options**: When clicked, options are available for Continue on Error and Email on Error behavior.
+- The **Undo Stack** card, which shows the latest actions performed in the dataflow, It can be navigated by clicking or using the undo/redo actions to view the DateFlow in a previous state. 
 
 The Properties Panel may be collapsed, and expanded, by clicking on the collapse/expand buttons. This is a useful feature when users require a larger working area on the canvas and/or when working on a small laptop screen.
 
@@ -71,6 +83,6 @@ The Properties Panel may be collapsed, and expanded, by clicking on the collapse
 
 The Output and Progress Panel is located at the bottom right of the canvas, and is usually initially in a collapsed position labelled Trace Log. Once expanded, three tabs are available:
 
-- Output: Output panel that, once the DataFlow run completes, provides a complete set of outputs per module.
-- Trace: A log of real-time events, including warnings and errors, of a DataFlow run.
-- Progress: a Real-time view of a DataFlow run, on a per module basis, including run statistics (e.g., module run duration).
+- **Output**: Output panel that, once the DataFlow run completes, provides a complete set of outputs per module.
+- **Trace**: A log of real-time events, including warnings and errors, of a DataFlow run.
+- **Progress**: a Real-time view of a DataFlow run, on a per module basis, including run statistics (e.g., module run duration).
