--- a/docs/DataFlows/05.DataFlows.md
+++ b/docs/DataFlows/05.DataFlows.md
@@ -31,11 +31,11 @@ The most common way of running a DataFlow Application is in the [Composable Desi
 
 Because a DataFlow is fundamentally a directed graph, the Composable execution engine is able to determine the order in which modules execute (there can be many valid orders), via [topological sorting](https://en.wikipedia.org/wiki/Topological_sorting) techniques. Composable's execution engine loops through the selected order and executes the modules. Before each module execution, the execution engine assigns the inputs to the module based on the input connections.
 
-    !!! Note
-        Although the user creates and interacts with the DataFlow in a web browser, the actual execution of the Dataflow occurs in the backend web servers and status and results are sent back and forth in a real-time manner.
-    
-    !!! Note
-        Note that in certain cases, e.g., if a module in a DataFlow is actually a web service, DataFlow execution can also result in computations or queries on remote systems outside the Composable host server.
+!!! note
+    Although the user creates and interacts with the DataFlow in a web browser, the actual execution of the Dataflow occurs in the backend web servers and status and results are sent back and forth in a real-time manner.
+
+!!! note
+    In certain cases, e.g., if a module in a DataFlow is actually a web service, DataFlow execution can also result in computations or queries on remote systems outside the Composable host server.
 
 Whenever the DataFlow is run from the [Composable Designer](./02.Composable-Designer.md), the entire DataFlow application model in the browser is sent to the application web service for execution. This is required because the user may want to change the DataFlow and run it, without saving the DataFlow to the database.
 
@@ -62,14 +62,14 @@ the DataFlow application, and the DataFlow is run.
 
 A DataFlow application can also act like a web service or a web page. Simply drag and drop a ‘Web Receive’ and a ‘Web Send’ module onto the canvas. Next, fill in the logic of processing the request and assigning the response with more modules and connections. The web request activator running in the backend receives web requests, and determines which DataFlow needs to run based on the specified DataFlow application ID in the request. The service then assigns the web request contents to the web receive module and runs the DataFlow application. The activator then takes the results from the DataFlow application and assigns them to the web response.
 
-    !!! Note 
-        DataFlows are web services! Not only can you coordinate calls to web services, but you can now *also* graphically program the internal workings of web services.
-    
-    !!! Note
-        Note that callers of the DataFlow application web service need execute permissions on the DataFlow application. The web request for the DataFlow should have a correct authentication cookie, or if everyone has been given ‘execute’ permissions on the application, then an anonymous web request will be accepted.
+!!! note 
+    DataFlows are web services! Not only can you coordinate calls to web services, but you can now *also* graphically program the internal workings of web services.
+
+!!! note
+    Note that callers of the DataFlow application web service need execute permissions on the DataFlow application. The web request for the DataFlow should have a correct authentication cookie, or if everyone has been given ‘execute’ permissions on the application, then an anonymous web request will be accepted.
 
 ## Results
 
-Each time a DataFlow application is executed by a user or through external activation, a *Run* is produced. A *Run* consists of *Results* for each module’s outputs. *Results* are strongly typed objects, and correspond to the output of a module. Examples of *Results* include graphs, charts, maps, strings, integers, and tables.
+Each time a DataFlow application is executed by a user or through external activation, a [*Run*](./10.Runs.md) is produced. A *Run* consists of *Results* for each module’s outputs. *Results* are strongly typed objects, and correspond to the output of a module. Examples of *Results* include graphs, charts, maps, strings, integers, and tables.
 
 *Runs* and *Results* are also securable resources, similar to DataFlows, QueryViews, WebApps, etc. A *Run* and its included *Results* share the same access control entry.
