--- a/docs/DataPortals/02.Create-DataPortals.md
+++ b/docs/DataPortals/02.Create-DataPortals.md
@@ -23,7 +23,7 @@ Begin with one of the Excel templates provided.
 
 ### Excel Sheet Basics
 
-Each sheet in the Excel workbook represents a container or table. Column headings in a sheet define the control setting, with rows representing values. The following column headers are typically found on each of the Excel sheets:
+Each sheet in the Excel workbook represents a container which is a similar object to a table. Column headings in a sheet define the control setting, with rows representing values. The following column headers are typically found on each of the Excel sheets:
 
 - [Name:](06.Setting-Details/Name.md) A whitespace-free name for the field. Think of this as the name you would give this field in a database.
 - [DisplayName:](06.Setting-Details/DisplayName.md) A human-friendly label that will be displayed above the input box for the field on the user interface.
