--- a/docs/QueryViews/02.Create-QueryView.md
+++ b/docs/QueryViews/02.Create-QueryView.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
 ## QueryView Configuration
 
-After clicking through the QueryView icon, you will be presented with a new, blank QueryView in Edit mode. A QueryView has two modes: Edit mode, which allows you to edit the configuration, settings and query, and View mode, which allows you to view the results.
+After clicking through the QueryView icon, you will be presented with a new, blank QueryView in Edit mode. A QueryView has two modes: **Edit mode**, which allows you to edit the configuration, settings and query, and **View mode**, which allows you to view the results.
 
 The QueryView Edit mode looks as follows:
 
@@ -58,3 +58,4 @@ You can switch back and forth between Edit and View to iterate on the query. To 
 
 !!! note
     Once a QueryView is saved, you can share the QueryView, and also place it in a Folder or add Tags to it (found in the Info modal). A full revision history will also be available.
+
