Fixing subbullets and anything missed in previous commit

--- a/docs/Composable-Platform/05.System-Administration.md
+++ b/docs/Composable-Platform/05.System-Administration.md
@@ -109,7 +109,7 @@ The user tab of the Administration portal provides an interface to list and sear
 
 ![Composable Admin Portal - Users Tab](img/02.05.Admin-Users.png)
 
-## User Management
+## Extension Management
 
 The extensions tab of the Administration portal provides an interface to list and search across all extensions or plugins that is installed on the Composable instance.
 
