--- a/docs/DataFlows/02.Composable-Designer.md
+++ b/docs/DataFlows/02.Composable-Designer.md
@@ -13,7 +13,7 @@ The Composable Designer is where users can compose, or author, their DataFlow Ap
 
 To create a new DataFlow, click on DataFlow or select DataFlow > Create New from the sidebar menu.
 
-The Composable Designer user interface is made up of five primary areas: the [canvas](#designer-canvas), the [module library](#module-library), the [toolbar](#Designer-toolbar), the [properties panel](#properties-panel), and the [output and progress panel](#output-and-progress-panel).
+The Composable Designer user interface is made up of five primary areas: the [canvas](#designer-canvas), the [module library](#module-library), the [toolbar](#designer-toolbar), the [properties panel](#properties-panel), and the [output and progress panel](#output-and-progress-panel).
 
 
 ![Composable DataFlow Application](img/03.02.Img_1.png)
@@ -48,10 +48,10 @@ From left to right:
 - **Help** that provides common [keyboard shortcuts](./03.KeyBoard-Shortcuts.md)
 - **Save** to save the current DataFlow Application.
 - **Resume**: DataFlow Resume allows you to carry many module output values from one run to the next. The execution engine detects changes to your DataFlow since the previous run and conditionally determine which modules need to be re-executed, all other modules will reuse the results from the previous run.
-  - Modules whose inputs (connections or values) have been changed since the last run.
-  - Modules with errors in the previous run.
-  - Modules that have the ‘Force Execution’ option set.
-  - Modules whose outputs cannot be cached (certain File executors and Property loaders)
+    - Modules whose inputs (connections or values) have been changed since the last run.
+    - Modules with errors in the previous run.
+    - Modules that have the ‘Force Execution’ option set.
+    - Modules whose outputs cannot be cached (certain File executors and Property loaders)
   - Modules that are downstream of any of the above modules.
 - **Run**, including a **Debug Mode** accessible via the dropdown, which allows you to either Run the entire DataFlow, or step through the modules and inspect intermediate results in Debug mode.
 
@@ -61,7 +61,7 @@ The Properties Panel, on the right-hand side of the canvas, includes:
 
 - The **Details** card for entering in the Name of the DataFlow as well as a Description.
 
-  - Renaming DataFlows can be done by simply editing the Name and Saving the DataFlow.
+    - Renaming DataFlows can be done by simply editing the Name and Saving the DataFlow.
 
 - The **Navigation** card for adjusting the current view and zoom level. The currently viewable section of the canvas is highighted in the thumbnail and can be moved around to pan the canvas.
 
@@ -69,12 +69,12 @@ The Properties Panel, on the right-hand side of the canvas, includes:
 
 - The **Options** card, where overall DataFlow settings can be applied. These include:
 
-  - **Avoid Saving Runs**: When enabled, the results of previous runs will not be saved in the Run History page.
-  - **Parallel Execution**: When enabled, modules in a DataFlow execute in parallel, as soon as all their input parameters are met.
-  - **Receive Progress Events**: When enabled, progress of a run is visible in the designer. See the Output and Progress Panel below.
-  - **Realtime Outputs**: When enabled, outputs are available in real-time during a run.  See the Output and Progress Panel below.
-  - **Receive Trace Events**: When enabled, status progress is available in the trace panel.  See the Output and Progress Panel below.
-  - **Error Handling Options**: When clicked, options are available for Continue on Error and Email on Error behavior.
+    - **Avoid Saving Runs**: When enabled, the results of previous runs will not be saved in the Run History page.
+    - **Parallel Execution**: When enabled, modules in a DataFlow execute in parallel, as soon as all their input parameters are met.
+    - **Receive Progress Events**: When enabled, progress of a run is visible in the designer. See the Output and Progress Panel below.
+    - **Realtime Outputs**: When enabled, outputs are available in real-time during a run.  See the Output and Progress Panel below.
+    - **Receive Trace Events**: When enabled, status progress is available in the trace panel.  See the Output and Progress Panel below.
+    - **Error Handling Options**: When clicked, options are available for Continue on Error and Email on Error behavior.
 - The **Undo Stack** card, which shows the latest actions performed in the dataflow, It can be navigated by clicking or using the undo/redo actions to view the DateFlow in a previous state. 
 
 The Properties Panel may be collapsed, and expanded, by clicking on the collapse/expand buttons. This is a useful feature when users require a larger working area on the canvas and/or when working on a small laptop screen.
