--- a/docs/DataFlows/05.DataFlows.md
+++ b/docs/DataFlows/05.DataFlows.md
@@ -66,7 +66,7 @@ A DataFlow application can also act like a web service or a web page. Simply dra
     DataFlows are web services! Not only can you coordinate calls to web services, but you can now *also* graphically program the internal workings of web services.
 
 !!! note
-    Note that callers of the DataFlow application web service need execute permissions on the DataFlow application. The web request for the DataFlow should have a correct authentication cookie, or if everyone has been given ‘execute’ permissions on the application, then an anonymous web request will be accepted.
+    Callers of the DataFlow application web service need execute permissions on the DataFlow application. The web request for the DataFlow should have a correct authentication cookie, or if everyone has been given ‘execute’ permissions on the application, then an anonymous web request will be accepted.
 
 ## Results
 
