--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -48,7 +48,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
     - **Pin Results**: Pinned Results allow you to carry a module’s output values from one run to the next, allowing you to skip executing that module *and* guaranteeing that its results will not change. Only applies to current Designer session, pinned results are not saved. Intended as a tool to help with developing, testing and debugging.
     - **Unpin Downstream Modules**: Unpin any modules downstream of the current module to ensure that it will use the inputs generated for the current
     - **Enable Forced Execution**: Tells the execution engine to *always* execute this module, regardless of whether it has results from a previous run it can draw from. In a sense, Pin Results and Force Execution are opposites
-    - **Statistics**: Shows timing and duration history of an executed module/
+    - **Statistics**: Shows timing and duration history of an executed module.
     - **Show Children** (loop modules only): Adds a red border to modules downstream of a loop module.
     - **Iterations** (looped modules only): Similar to statistics, displays the timing, duration and status for each iteration of a executed module in a loop.
     - **Create DataFlow from Selection**: This will consolidate all of the selected modules into one "Nested" module and save it as a separate DataFlow. Double-clicking this nested module will navigate you to the nested DataFlow.
