Reading BlueBike data tutorial

--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -41,7 +41,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
     - **Retry Delay**: Allows the user to set a delay between retry executions
     - **Continue on Error**: An error will not prevent the rest of the DataFlow from running.
     - **Cache Run Results**: Caches the output values of the module with the inputs when executing. When the same inputs are used on a later run within the user-defined caching period, the cached value is used instead of executing again. For example, if you have a slow SQL query from which the returned data is not expected to change often, you could choose to cache the results of your query module for 30 minutes in order to avoid running the query as frequently
-- **Help**: Clicking the Help icon will bring up a modal with the description of the module as well as descriptions and object types for all of the inputs and outputs.
+- **Module Details**: Clicking the question mark icon will bring up a modal with the description of the module as well as descriptions and object types for the inputs and outputs.
 - **Right Click**: Right clicking a module or a selection of modules brings up several options
     - **Disable/Enable**: Disables/enables execution of the module. Only applies to current Designer session, disabled status is not saved. Keyboard shortcut Ctrl+E
     - **Duplicate**: Adds a copy of the selection to the dataflow.
